Fix various ranking UI issues